--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 <img src="./assets/loader.svg" id="loader" hidden>
 <button class="button" id="button">Get users</button>
+<button id="sortButton">sort</button>
+<input type="text" placeholder="Filter" id="input" onfocus="this.value=''" onkeyup="myFunction()" >
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="app.js" defer></script>
 
