--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Users</title>
 
 </head>
 
 <body>
+
 <img src="./assets/loader.svg" id="loader" hidden>
 <button class="button" id="button">Get users</button>
 <input type="text" placeholder="Filter" id="input"  onkeyup="myFunction()" >
