--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="./assets/loader.svg" id="loader" hidden>
 <button class="button" id="button">Get users</button>
 <input type="text" placeholder="Filter" id="input"  onkeyup="myFunction()" >
-<button onclick="document.getElementById('input').value = ''">Clear filter</button>
+<!--<button onclick="document.getElementById('input').value = ''">Clear filter</button>-->
 <button onclick="sortList()">sort</button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="app.js" defer></script>
