--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
 <img src="./assets/loader.svg" id="loader" hidden>
-<button class="button" id="button">Get users</button>
-<input type="text" placeholder="Filter" id="input"  onkeyup="myFunction()" >
+<button class="button btn btn2 btn3" id="button">Get users</button>
+<input type="text" placeholder="Filter" id="input" hidden onkeyup="myFunction()" >
 <!--<button onclick="document.getElementById('input').value = ''">Clear filter</button>-->
-<button onclick="sortList()">sort</button>
+<button id="sort" class="btn btn2" onclick="sortList()" hidden>sort</button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="app.js" defer></script>
 
