--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img src="./assets/loader.svg" id="loader" hidden>
+<img class="preload" src="./assets/loader.svg" id="loader" hidden>
 <button class="button btn btn2 btn3" id="button">Get users</button>
 <input type="text" placeholder="Filter" id="input" hidden onkeyup="myFunction()" >
 <!--<button onclick="document.getElementById('input').value = ''">Clear filter</button>-->
